@@ -17,18 +17,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - Ralf's APACI Makefile.tmpl
 
-- SCO make buglet in src/modules/perl/Makefile
-  $(STATIC_SRC) -> Apache.c Constants.c
-              Krister Keskitalo <krister@mailbox.postnet.se>
-
-- something better for $Apache::NameWithVirtualHost
-              Ben Laurie <ben@algroup.co.uk>
-              Janos Farkas 
-
-- Makefile.PL patches for BenSSL
-           Stefano Santoro <ssantoro@VOICETEK.COM>
-           Dan Peterson <pete@spry.com>
-
 - Gerald's suggestion to avoid possible deadlock under win32
 
 - Doug B's Apache::SIG enhancement
