@@ -17,6 +17,10 @@ Apache->module('Apache::Debug') if $Apache::Registry::Debug;
 
 my $Is_Win32 = $^O eq "MSWin32";
 
+unless ($Apache::Registry::{NameWithVirtualHost}) {
+    $Apache::Registry::NameWithVirtualHost = 1;
+}
+
 sub handler {
     my $r = shift;
     if(ref $r) {
